# app/Http/Controllers/PackageTemplateController.php
@@ -38,7 +38,8 @@ class PackageTemplateController extends Controller
                             type: 'array',
                             items: new OA\Items(ref: '#/components/schemas/PackageTemplate')
                         ),
-                        new OA\Property(property: 'meta', ref: '#/components/schemas/PaginatedResponse/properties/meta'),
+                        new OA\Property(property: 'links', type: 'object'),
+                        new OA\Property(property: 'meta', type: 'object'),
                     ]
                 )
             ),
