# app/Http/Controllers/WorkoutLogController.php
@@ -313,7 +313,8 @@ class WorkoutLogController extends Controller
                             type: 'array',
                             items: new OA\Items(ref: '#/components/schemas/WorkoutLog')
                         ),
-                        new OA\Property(property: 'meta', ref: '#/components/schemas/PaginatedResponse/properties/meta'),
+                        new OA\Property(property: 'links', type: 'object'),
+                        new OA\Property(property: 'meta', type: 'object'),
                     ]
                 )
             ),
